--- a/index.html
+++ b/index.html
@@ -1,14 +1,105 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" sizes="100x100" href="./img/Brand/logo-symbol.jpg">
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/png" sizes="100x100" href="./img/Brand/logo-symbol.jpg" />
     <title>E-Commerce-Front-End</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-   
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+
+    <!-- CSS Stylesheet Links -->
+    <link rel="stylesheet" href="style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
+</head>
+
+<body>
+    <!-- Header Section -->
+    <div class="border-bottom">
+        <div class="container">
+            <header
+                class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-0">
+                <!-- Brand Logo -->
+                <div class="col-md-1 mb-2 mb-md-0 d-flex flex-wrap">
+                    <a class="navbar-brand" href="#">
+                        <img src="./img/Brand/logo-colored.jpg" alt="Brand" width="150" height="46" />
+                    </a>
+                </div>
+                <!-- Search Bar -->
+                <div class="nav col-10 col-md-auto mb-2 d-flex mb-md-0 Search-box">
+                    <form class="d-flex justify-content-center flex-grow-1" role="search">
+                        <input type="search" class="form-control border-0 Search-input" size="40" placeholder="Search"
+                            aria-label="Search" />
+                    </form>
+                    <div
+                        class="border-top-0 border-end-0 border-bottom-0 border-start border-1 border-primary rounded-0 Search-category">
+                        <button type="button" class="btn">
+                            All category
+                            <span><i class="fa-sharp fa-solid fa-chevron-down" style="color: #8b96a5"></i></span>
+                        </button>
+                    </div>
+                    <div class="Search-button">
+                        <button type="button" class="btn btn-primary rounded-0">
+                            Search
+                        </button>
+                    </div>
+                </div>
+                <!-- Action Buttons -->
+                <div class="col-md-3 mb-2 d-flex mb-md-0  text-end">
+                    <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
+                        <!-- Profile -->
+                        <li>
+                            <a href="#" class="nav-link text-secondary"><svg xmlns="http://www.w3.org/2000/svg"
+                                    width="16" height="16" fill="currentColor"
+                                    class="bi bi-person-fill d-block mx-auto mb-1" viewBox="0 0 16 16"
+                                    style="color: #8b96a5">
+                                    <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6" />
+                                </svg>
+                                Profile
+                            </a>
+                        </li>
+                        <!-- Message -->
+                        <li>
+                            <a href="#" class="nav-link text-secondary">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-chat-left-text-fill d-block mx-auto mb-1" viewBox="0 0 16 16"
+                                    style="color: #8b96a5">
+                                    <path
+                                        d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H4.414a1 1 0 0 0-.707.293L.854 15.146A.5.5 0 0 1 0 14.793zm3.5 1a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1zm0 2.5a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1zm0 2.5a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1z" />
+                                </svg>
+                                Message
+                            </a>
+                        </li>
+                        <!-- Order  -->
+                         <li>
+                            <a href="#" class="nav-link text-secondary">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill  d-block mx-auto mb-1" viewBox="0 0 16 16"   style="color: #8b96a5">
+                                    <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                                  </svg>
+                                Order
+                            </a>
+                         </li>
+                        <!-- My Cart  -->
+                         <li>
+                            <a href="#" class="nav-link text-secondary">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3 d-block mx-auto mb-1" viewBox="0 0 16 16" style="color: #8b96a5">
+                                    <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                                  </svg>
+                                  Cart
+                            </a>
+                         </li>
+                    </ul>
+                </div>
+            </header>
+        </div>
+    </div>
+
+    <!-- Bootstrap JavaScript Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
