header part 3  done

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>testing</title>
+    <title>Brand</title>
+    <link rel="icon" type="image/png" href="./img/Brand/logo-symbol.jpg">
     <!-- CSS Styling  -->
     <link rel="stylesheet" href="style.css">
       <!-- Font Awesome -->
@@ -210,13 +211,13 @@
                 <div class="col">
                     <div class="row block-items-seconed-group">
                         <div class="block-item col border-end">
-                                   <div class="col">
-                                       <div>Soft chairs</div>
-                                       <p>from <br>USD 19</p>
-                                   </div>
-                                   <div class="col pt-4">
-                                       <img src="./img/interior/1.png" alt="Soft chairs">
-                                   </div>
+                            <div class="col">
+                                <div>Soft chairs</div>
+                                    <p>from <br>USD 19</p>
+                            </div>
+                            <div class="col pt-4">
+                              <img src="./img/interior/1.png" alt="Soft chairs">
+                            </div>
                         </div>
                         <div class="block-item col border-start">
                                    <div class="col">
@@ -292,50 +293,219 @@
 <!-- /SECTION BLOCK-ITEMS-GROUP -->
 
 <!-- SECTION BLOCK-ITEMS-SUB-GROUP -->
-<div id="block-items-sub-group" class="section">
+  <div id="block-items-sub-group" class="section">
     <div class="container">
         <div class="block-items-sub-group">
             <div class="row">
-                <div class="col">
+             <div class="col-5">
                     <img src="./img/consumer-electronics-and-gadgets.png" alt="Consumer electronics and gadgets">
                     <div class="block-items-sub-group-text"><strong>Consumer<br> electronics and<br> gadgets</strong></div>
                     <button class="source-sub-btn">Source now</button>
-                </div>
-                <div class="col">
+             </div>
+             <div class="col">
                     <div class="row">
-                        <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
-                        <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
-                    
-                        <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
-                        <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
-
-                         <!-- Force next columns to break to new line -->
-                         <div class="w-100"></div>
-                    
-                         <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
-                         <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
-
-                        <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
-                        <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
+                        <div class="col">
+                            <div class="row block-items-seconed-group">
+                                <div class="block-item col border-end">
+                                    <div class="col">
+                                        <div>Soft chairs</div>
+                                            <p>from <br>USD 19</p>
+                                    </div>
+                                    <div class="col pt-4">
+                                      <img src="./img/interior/1.png" alt="Soft chairs">
+                                    </div>
+                                </div>
+                                <div class="block-item col border-start">
+                                           <div class="col">
+                                               <div>Sofa & chairs</div>
+                                               <p>from <br>USD 19</p>
+                                           </div>
+                                           <div class="col  pt-4">                                
+                                           <img src="./img/interior/6.png" alt="Soft chairs">
+                                           </div>
+                                </div>
+                                <div class="block-item col border-start">
+                                           <div class="col">
+                                               <div>Kitchen dishes</div>
+                                               <p>from <br>USD 19</p>
+                                           </div>
+                                           <div class="col  pt-4">                                
+                                           <img src="./img/interior/5.png" alt="Soft chairs">
+                                           </div>
+                                </div>
+                                <div class="block-item col border-start">
+                                           <div class="col">
+                                               <div>Smart watches</div>
+                                               <p>from <br>USD 19</p>
+                                           </div>
+                                           <div class="col  pt-4">                               
+                                           <img src="./img/interior/3.png" alt="Soft chairs">
+                                           </div>
+                                </div>
+                                <!-- Force next columns to break to new line -->
+                                <div class="w-100"></div>
+                                <div class="block-item col border-end">
+                                           <div class="col">
+                                               <div>Kitchen mixer</div>
+                                               <p>from <br>USD 100</p>
+                                           </div>
+                                           <div class="col  pt-4">
+                                               <img src="./img/interior/9.png" alt="Soft chairs">
+                                           </div>
+                                </div>
+                                <div class="block-item col border-start">
+                                           <div class="col">
+                                               <div>Blenders</div>
+                                               <p>from <br>USD 39</p>
+                                           </div>
+                                           <div class="col  pt-4">
+                                               <img src="./img/interior/4.png" alt="Soft chairs">
+                                           </div>
+                                </div>
+                                <div class="block-item col border-start">
+                                           <div class="col">
+                                               <div>Home appliance</div>
+                                               <p>from <br>USD 19</p>
+                                           </div>
+                                           <div class="col  pt-4">
+                                               <img src="./img/interior/10.png" alt="Soft chairs">
+                                           </div>
+                                </div>
+                                <div class="block-item col border-start">
+                                           <div class="col">
+                                               <div>Coffee maker</div>
+                                               <p>from <br>USD 10</p>
+                                           </div>
+                                           <div class="col  pt-4">
+                                               <img src="./img/interior/8.png" alt="Soft chairs">
+                                           </div>
+                                </div>
                       </div>
+                </div>
+            </div>
+             </div>
+            </div>
+        </div>
+   </div>
+  </div>
+
+<!-- /SECTION BLOCK-ITEMS-SUB-GROUP -->
+
+<!-- SECTION SUPPLIERS -->
+<div id="suppliers" class="section">
+    <div class="container">
+        <div class="row">
+            <img src="./img/supplier-bg.jpg" alt="">
+            <div class="col-6"></div>
+            <div class="col-6"></div>
+        </div>
+    </div>
+ </div>
+<!-- /SECTION SERVICE -->
+
+<!-- SECTION RECOMMEND -->
+ <div id="recommendation" class="section">
+    <div class="container">
+        <div class="row">
+        </div>
+    </div>
+ </div>
+<!-- /SECTION RECOMEND -->
+
+
+<!-- SECTION SERVICES -->
+<div id="services" class="section">
+    <div class="container">
+        <div class="row">
+        </div>
+    </div>
+ </div>
+<!-- /SECTION SERVICES -->
+
+<!-- SECTION COUNTRY -->
+<div id="country" class="section">
+    <div class="container">
+        <div class="row">
+            <h3><strong>Suppliers by region</strong></h3>
+            <div class="col-2 supplier-flag">
+                <img src="./img/flags/Arab-Emirates.png" alt="Arab Emirates">
+                <div class="col">
+                <p>Arab Emirates</p>
+                <small>shopname.ae</small>
+                </div>
+            </div>
+            <div class="col-2 supplier-flag">
+                <img src="./img/flags/Australia.png" alt="Australia">
+                <div class="col">
+                <p>Australia</p>
+                <small>shopname.ae</small>
+                </div>
+            </div>
+            <div class="col-2 supplier-flag">
+                <img src="./img/flags/US.png" alt="United States">
+                <div class="col">
+                <p>United States</p>
+                <small>shopname.ae</small>
+                </div>
+            </div>
+            <div class="col-2 supplier-flag">
+                <img src="./img/flags/Russia.png" alt="Russia">
+                <div class="col">
+                <p>Russia</p>
+                <small>shopname.ru</small>
+                </div>
+            </div>
+            <div class="col-2 supplier-flag">
+                <img src="./img/flags/Italy.png" alt="Italy">
+                <div class="col">
+                <p>Italy</p>
+                <small>shopname.it</small>
+                </div>
+            </div>
+
+            <div class="w-100"></div>
+            <div class="col-2 supplier-flag">
+                <img src="./img/flags/Denmark.png" alt="Denmark">
+                <div class="col">
+                <p>Denmark</p>
+                <small>shopname.com.dk</small>
+                </div>
+            </div>
+            <div class="col-2 supplier-flag">
+                <img src="./img/flags/France.png" alt="France">
+                <div class="col">
+                <p>France</p>
+                <small>shopname.com.fr</small>
+                </div>
+            </div>
+            <div class="col-2 supplier-flag">
+                <img src="./img/flags/Arab-Emirates.png" alt="Arab Emirates">
+                <div class="col">
+                <p>Arab Emirates</p>
+                <small>shopname.ae</small>
+                </div>
+            </div>
+            <div class="col-2 supplier-flag">
+                <img src="./img/flags/China.png" alt="China">
+                <div class="col">
+                <p>China</p>
+                <small>shopname.cn</small>
+                </div>
+            </div>
+            <div class="col-2 supplier-flag">
+                <img src="./img/flags/Great-Britiain.png" alt="Great Britain">
+                <div class="col">
+                <p>Great Britain</p>
+                <small>shopname.co.uk</small>
                 </div>
             </div>
         </div>
     </div>
  </div>
-<!-- /SECTION BLOCK-ITEMS-SUB-GROUP -->
-
-<!-- SECTION RECOMMEND -->
-<!-- /SECTION RECOMEND -->
-
-<!-- SECTION SERVICE -->
-<!-- /SECTION SERVICE -->
-
-<!-- SECTION COUNTRY -->
 <!-- /SECTION COUNTRY -->
 
     <!-- /MAIN CONTENT -->
-</div>
+ </div>
 
 
 <!-- SECTION NEWSLETTER -->
