header part 3  done

--- a/index.html
+++ b/index.html
@@ -417,6 +417,27 @@
 <div id="services" class="section">
     <div class="container">
         <div class="row">
+            <h5><strong>Our extra services</strong></h5>
+            <div class="col services-box">
+                <img src="./img/Services/Service-1.png" alt="">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <p>Source from <br> industry Hubs</p>
+            </div>
+            <div class="col services-box">
+                <img src="./img/Services/Service-2.png" alt="">
+                <i class="fa-solid fa-box-archive"></i>
+                <p>Customize Your <br> Products</p>
+            </div>
+            <div class="col services-box">
+                <img src="./img/Services/Service-3.png" alt="">
+                <i class="fa-regular fa-paper-plane"></i>
+                <p>Fast, reliable Shipping <br> by ocean or air</p>
+            </div>
+            <div class="col services-box">
+                <img src="./img/Services/Service-4.png" alt="">
+                <i class="fa-solid fa-shield-halved"></i>
+                <p>Product monitoring <br> and inspection</p>
+            </div>
         </div>
     </div>
  </div>
