header part 4  done

--- a/index.html
+++ b/index.html
@@ -425,11 +425,84 @@
 <!-- /SECTION SUPPLIERS -->
 
 <!-- SECTION RECOMMEND -->
- <div id="recommendation" class="section">
+ <div id="recommendation" class="section"> 
     <div class="container">
-        <div class="row">
-            <h4 style="font-weight: 600;">Recommended items</h4>
+    <h4 style="font-weight: 600; padding: 0 0 20px;">Recommended items</h4>
+        <div class="row recommendation-row">
+                <div class="col-2 recommend-card">
+                <a href="">
+                <img src="./img/cloth/1.png" alt="">
+                <h6>$10.30</h6>
+                <p>T-shirts with multiple colors, for men</p>
+                </a>
+               </div>
+               <div class="col-2 recommend-card">
+                <a href="">
+                <img src="./img/cloth/3.png" alt="">
+                <h6>$10.30</h6>
+                <p>T-shirts with multiple colors, for men</p>
+                </a>
+               </div>
+               <div class="col-2 recommend-card">
+                <a href="">
+                <img src="./img/cloth/7.png" alt="">
+                <h6>$10.30</h6>
+                <p>T-shirts with multiple colors, for men</p>
+                </a>
+               </div>
+               <div class="col-2 recommend-card">
+                <a href="">
+                <img src="./img/cloth/6.png" alt="">
+                <h6>$10.30</h6>
+                <p>T-shirts with multiple colors, for men</p>
+                </a>
+               </div>
+               <div class="col-2 recommend-card">
+                <a href="">
+                <img src="./img/cloth/5.png" alt="">
+                <h6>$10.30</h6>
+                <p>T-shirts with multiple colors, for men</p>
+                </a>
+               </div>
         </div>
+        <div class="w-100 h-500"></div>
+        <div class="row recommendation-row">
+           <div class="col-2 recommend-card">
+            <a href="">
+            <img src="./img/cloth/4.png" alt="">
+            <h6>$10.30</h6>
+            <p>T-shirts with multiple colors, for men</p>
+            </a>
+           </div>
+           <div class="col-2 recommend-card">
+            <a href="">
+            <img src="./img/tech/9.png" alt="">
+            <h6>$10.30</h6>
+            <p>T-shirts with multiple colors, for men</p>
+            </a>
+           </div>
+           <div class="col-2 recommend-card">
+            <a href="">
+            <img src="./img/cloth/5.png" alt="">
+            <h6>$10.30</h6>
+            <p>T-shirts with multiple colors, for men</p>
+            </a>
+           </div>
+           <div class="col-2 recommend-card">
+            <a href="">
+            <img src="./img/interior/3.png" alt="">
+            <h6>$10.30</h6>
+            <p>T-shirts with multiple colors, for men</p>
+            </a>
+           </div>
+           <div class="col-2 recommend-card">
+            <a href="">
+            <img src="./img/tech/10.png" alt="">
+            <h6>$10.30</h6>
+            <p>T-shirts with multiple colors, for men</p>
+            </a>
+           </div>
+    </div>
     </div>
  </div>
 <!-- /SECTION RECOMEND -->
@@ -437,9 +510,9 @@
 
 <!-- SECTION SERVICES -->
 <div id="services" class="section">
-    <div class="container">
+    <div class="container">            
+    <h5><strong>Our extra services</strong></h5>
         <div class="row">
-            <h5><strong>Our extra services</strong></h5>
             <div class="col services-box">
                 <img src="./img/Services/Service-1.png" alt="">
                 <i class="fa-solid fa-magnifying-glass"></i>
