header page 2 part 1

--- a/index.html
+++ b/index.html
@@ -213,109 +213,15 @@
         <!-- /SECTION SALE -->
 
         <!-- SECTION BLOCK-ITEMS-GROUP -->
-       <!-- <div id="block-items-group" class="section">
-            <div class="container">
-                <div class="block-items-group">
-                    <div class="row">
-                        <div class="col-md-3 w-40">
-                            <img src="./img/home-and-outdoor.png" alt="Home and outdoor">
-                            <div class="block-items-group-text"><strong>Home and<br> outdoor</strong></div>
-                            <button class="source-btn">Source now</button>
-                        </div>
-                        <div class="col">
-                            <div class="row block-items-seconed-group">
-                                <div class="block-item col border-end">
-                                    <div class="col">
-                                        <div>Soft chairs</div>
-                                        <p>from <br>USD 19</p>
-                                    </div>
-                                    <div class="col pt-4">
-                                        <img src="./img/interior/1.png" alt="Soft chairs">
-                                    </div>
-                                </div>
-                                <div class="block-item col border-start">
-                                    <div class="col">
-                                        <div>Sofa & chairs</div>
-                                        <p>from <br>USD 19</p>
-                                    </div>
-                                    <div class="col  pt-4">
-                                        <img src="./img/interior/6.png" alt="Soft chairs">
-                                    </div>
-                                </div>
-                                <div class="block-item col border-start">
-                                    <div class="col">
-                                        <div>Kitchen dishes</div>
-                                        <p>from <br>USD 19</p>
-                                    </div>
-                                    <div class="col  pt-4">
-                                        <img src="./img/interior/5.png" alt="Soft chairs">
-                                    </div>
-                                </div>
-                                <div class="block-item col border-start">
-                                    <div class="col">
-                                        <div>Smart watches</div>
-                                        <p>from <br>USD 19</p>
-                                    </div>
-                                    <div class="col  pt-4">
-                                        <img src="./img/interior/3.png" alt="Soft chairs">
-                                    </div>
-                                </div>
-                                <div class="w-100"></div>
-                                <div class="block-item col border-end">
-                                    <div class="col">
-                                        <div>Kitchen mixer</div>
-                                        <p>from <br>USD 100</p>
-                                    </div>
-                                    <div class="col  pt-4">
-                                        <img src="./img/interior/9.png" alt="Soft chairs">
-                                    </div>
-                                </div>
-                                <div class="block-item col border-start">
-                                    <div class="col">
-                                        <div>Blenders</div>
-                                        <p>from <br>USD 39</p>
-                                    </div>
-                                    <div class="col  pt-4">
-                                        <img src="./img/interior/4.png" alt="Soft chairs">
-                                    </div>
-                                </div>
-                                <div class="block-item col border-start">
-                                    <div class="col">
-                                        <div>Home appliance</div>
-                                        <p>from <br>USD 19</p>
-                                    </div>
-                                    <div class="col  pt-4">
-                                        <img src="./img/interior/10.png" alt="Soft chairs">
-                                    </div>
-                                </div>
-                                <div class="block-item col border-start">
-                                    <div class="col">
-                                        <div>Coffee maker</div>
-                                        <p>from <br>USD 10</p>
-                                    </div>
-                                    <div class="col  pt-4">
-                                        <img src="./img/interior/8.png" alt="Soft chairs">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>  -->
         <div id="block-items-group" class="section">
             <div class="container mt-4 border rounded">
                 <div class="row">
                     <!-- Left Big Image Section -->
                     <div class="col-3 p-0">
                         <div class="block">
-                            <!-- <img src="https://via.placeholder.com/300x200" alt="Big Image">
-                            <div class="block-text">Home and Outdoor</div>
-                            <button class="source-btn">Source now</button> -->
-                            <img src="./img/consumer-electronics-and-gadgets.png"
+                            <img src="./img/home-and-outdoor.png"
                                         alt="Consumer electronics and gadgets">
-                                    <div class="block-text"><strong>Consumer<br> electronics and<br>
-                                            gadgets</strong></div>
+                                    <div class="block-text"><strong>Home and<br>outdoor</strong></div>
                                     <button class="source-btn">Source now</button>
                         </div>
                     </div>
@@ -412,9 +318,6 @@
                     <!-- Left Big Image Section -->
                     <div class="col-3 p-0">
                         <div class="block">
-                            <!-- <img src="https://via.placeholder.com/300x200" alt="Big Image">
-                            <div class="block-text">Home and Outdoor</div>
-                            <button class="source-btn">Source now</button> -->
                             <img src="./img/consumer-electronics-and-gadgets.png"
                                         alt="Consumer electronics and gadgets">
                                     <div class="block-text"><strong>Consumer<br> electronics and<br>
@@ -427,34 +330,34 @@
                     <div class="col">
                         <div class="row block-items-group">
                             <!-- First Row of Items -->
-                            <div class="col-md-3 col-sm-6 block-item">
+                            <div class="col-md-3 col-sm-6 block-sub-item">
                                 <div class="">
-                                    <div>Soft chairs</div>
+                                    <div>Smart watches</div>
                                     <p>from <br>USD 19</p>
                                 </div>
                                 <div class=" pt-4">
-                                    <img src="./img/interior/1.png" alt="Soft chairs">
+                                    <img src="./img/tech/8.png" alt="Soft chairs">
                                 </div>
                             </div>
-                            <div class="col-md-3 col-sm-6 block-item">
+                            <div class="col-md-3 col-sm-6 block-sub-item">
                                 <div class="">
-                                    <div>Sofa & chairs</div>
+                                    <div>Cameras</div>
                                     <p>from <br>USD 19</p>
                                 </div>
                                 <div class=" pt-4">
-                                    <img src="./img/interior/6.png" alt="Soft chairs">
+                                    <img src="./img/tech/6.png" alt="Soft chairs">
                                 </div>
                             </div>
-                            <div class="col-md-3 col-sm-6 block-item">
+                            <div class="col-md-3 col-sm-6 block-sub-item">
                                 <div class="">
-                                    <div>Kitchen dishes</div>
+                                    <div>Headphones</div>
                                     <p>from <br>USD 19</p>
                                 </div>
                                 <div class=" pt-4">
-                                    <img src="./img/interior/5.png" alt="Soft chairs">
+                                    <img src="./img/tech/9.png" alt="Soft chairs">
                                 </div>
                             </div>
-                            <div class="col-md-3 col-sm-6 block-item">
+                            <div class="col-md-3 col-sm-6 block-sub-item">
                                 <div class="">
                                     <div>Smart watches</div>
                                     <p>from <br>USD 19</p>
@@ -465,40 +368,40 @@
                             </div>
                             
                             <!-- Second Row of Items -->
-                            <div class="col-md-3 col-sm-6 block-item">
+                            <div class="col-md-3 col-sm-6 block-sub-item">
                                 <div class="">
-                                    <div>Kitchen mixer</div>
+                                    <div>Gaming set</div>
                                     <p>from <br>USD 100</p>
                                 </div>
                                 <div class=" pt-4">
-                                    <img src="./img/interior/9.png" alt="Soft chairs">
+                                    <img src="./img/tech/5.png" alt="Soft chairs">
                                 </div>
                             </div>
-                            <div class="col-md-3 col-sm-6 block-item">
+                            <div class="col-md-3 col-sm-6 block-sub-item">
                                 <div class="">
-                                    <div>Blenders</div>
+                                    <div>Laptop & PC</div>
                                    <p>from <br>USD 39</p>
                                 </div>
                                 <div class=" pt-4">
-                                    <img src="./img/interior/4.png" alt="Soft chairs">
+                                    <img src="./img/tech/7.png" alt="Soft chairs">
                                 </div>
                             </div>
-                            <div class="col-md-3 col-sm-6 block-item">
+                            <div class="col-md-3 col-sm-6 block-sub-item">
                                 <div class="">
-                                    <div>Home appliance</div>
+                                    <div>Smartphones</div>
                                    <p>from <br>USD 19</p>
                                 </div>
                                 <div class=" pt-4">
-                                    <img src="./img/interior/10.png" alt="Soft chairs">
+                                    <img src="./img/tech/2.png" alt="Soft chairs">
                                 </div>
                             </div>
-                            <div class="col-md-3 col-sm-6 block-item">
+                            <div class="col-md-3 col-sm-6 block-sub-item">
                                 <div class="">
-                                    <div>Coffee maker</div>
+                                    <div>Electric kattel</div>
                                     <p>from <br>USD 10</p>
                                 </div>
                                 <div class=" pt-4">
-                                    <img src="./img/interior/8.png" alt="Soft chairs">
+                                    <img src="./img/tech/1.png" alt="Soft chairs">
                                 </div>
                             </div>
                         </div>
@@ -558,28 +461,28 @@
                         <a href="">
                             <img src="./img/cloth/3.png" alt="">
                             <h6>$10.30</h6>
-                            <p>T-shirts with multiple colors, for men</p>
+                            <p>Brown winter coat medium size</p>
                         </a>
                     </div>
                     <div class="col-2 recommend-card">
                         <a href="">
                             <img src="./img/cloth/7.png" alt="">
                             <h6>$10.30</h6>
-                            <p>T-shirts with multiple colors, for men</p>
+                            <p>Blue formal coat medium size</p>
                         </a>
                     </div>
                     <div class="col-2 recommend-card">
                         <a href="">
                             <img src="./img/cloth/6.png" alt="">
                             <h6>$10.30</h6>
-                            <p>T-shirts with multiple colors, for men</p>
+                            <p>Blue wallet for men lather materfial</p>
                         </a>
                     </div>
                     <div class="col-2 recommend-card">
                         <a href="">
                             <img src="./img/cloth/5.png" alt="">
                             <h6>$10.30</h6>
-                            <p>T-shirts with multiple colors, for men</p>
+                            <p>Jeans bag for travel for men</p>
                         </a>
                     </div>
                 </div>
@@ -589,35 +492,35 @@
                         <a href="">
                             <img src="./img/cloth/4.png" alt="">
                             <h6>$10.30</h6>
-                            <p>T-shirts with multiple colors, for men</p>
+                            <p>Jeans shorts for men blue color</p>
                         </a>
                     </div>
                     <div class="col-2 recommend-card">
                         <a href="">
                             <img src="./img/tech/9.png" alt="">
                             <h6>$10.30</h6>
-                            <p>T-shirts with multiple colors, for men</p>
+                            <p>Hand set for gaming with mic</p>
                         </a>
                     </div>
                     <div class="col-2 recommend-card">
                         <a href="">
                             <img src="./img/cloth/5.png" alt="">
                             <h6>$10.30</h6>
-                            <p>T-shirts with multiple colors, for men</p>
+                            <p>Jeans bag for travel for men</p>
                         </a>
                     </div>
                     <div class="col-2 recommend-card">
                         <a href="">
                             <img src="./img/interior/3.png" alt="">
                             <h6>$10.30</h6>
-                            <p>T-shirts with multiple colors, for men</p>
+                            <p>Smartwatch silver color modern</p>
                         </a>
                     </div>
                     <div class="col-2 recommend-card">
                         <a href="">
                             <img src="./img/tech/10.png" alt="">
                             <h6>$10.30</h6>
-                            <p>T-shirts with multiple colors, for men</p>
+                            <p>Jeans bag for travel for men</p>
                         </a>
                     </div>
                 </div>
