header page 2 part 2

--- a/productlist.html
+++ b/productlist.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Brand</title>
+    <title>Brand/product</title>
     <link rel="icon" type="image/png" href="./img/Brand/logo-symbol.jpg">
     <!-- CSS Styling  -->
     <link rel="stylesheet" href="productlist.css">
@@ -112,7 +112,29 @@
         </div>
         <!-- /BOTTOM HEADER -->
     </header>
-
+    <div id="main">
+        	<!-- BREADCRUMB -->
+		<div id="breadcrumb" class="section">
+			<!-- container -->
+			<div class="container">
+				<!-- row -->
+				<div class="row">
+					<div class="col-md-12">
+                        <ul class="breadcrumb-tree">
+							<li><a href="#">Home &nbsp; &nbsp;<i class="fa-solid fa-chevron-right"></i></a></li>
+							<li><a href="#">Clothings &nbsp; &nbsp;<i class="fa-solid fa-chevron-right"></i></a></li>
+							<li><a href="#">Men's wear &nbsp; &nbsp;<i class="fa-solid fa-chevron-right"></i></a></li>
+							<li><a href="#">Summer clothing</a></li>
+						</ul>
+					</div>
+				</div>
+				<!-- /row -->
+			</div>
+			<!-- /container -->
+		</div>
+		<!-- /BREADCRUMB -->
+    </div>
+    
     
     <!-- SECTION NEWSLETTER -->
     <div id="newsletter" class="section">
