--- a/products.html
+++ b/products.html
@@ -113,7 +113,7 @@
         <!-- /BOTTOM HEADER -->
     </header>
     <div id="main">
-        	<!-- BREADCRUMB -->
+        <!-- BREADCRUMB -->
 		<div id="breadcrumb" class="section">
 			<!-- container -->
 			<div class="container">
@@ -217,169 +217,7 @@
                         <!-- PRICE RANGE -->
                         <div class="aside">
                             <h6 class="aside-title">Price range  <span><i class="fa-solid fa-angle-up"></i></span></h6>
-                            <div class="price-filter">```html
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Brand/products</title>
-    <link rel="icon" type="image/png" href="./img/Brand/logo-symbol.jpg">
-    <!-- CSS Styling  -->
-    <link rel="stylesheet" href="products.css">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<body>
-    <!-- HEADER -->
-    <header>
-        <!-- MAIN HEADER -->
-        <div id="header">
-            <!-- container -->
-            <div class="container">
-                <!-- row -->
-                <div class="row">
-                    <!-- LOGO -->
-                    <div class="col-md-3">
-                        <div class="header-logo">
-                            <a href="#" class="logo">
-                                <img src="./img/Brand/logo-colored.jpg" alt="Brand Logo" width="150" height="46">
-                            </a>
-                        </div>
-                    </div>
-                    <!-- /LOGO -->
-
-                    <!-- SEARCH BAR -->
-                    <div class="col-md-6">
-                        <div class="header-search clearfix">
-                            <form>
-                                <input class="input" placeholder="Search here">
-                                <select class="input-select">
-                                    <option value="0">All Categories</option>
-                                    <option value="1">Category 01</option>
-                                    <option value="1">Category 02</option>
-                                </select>
-                                <button class="search-btn">Search</button>
-                            </form>
-                        </div>
-                    </div>
-                    <!-- /SEARCH BAR -->
-
-                    <!-- ACTION -->
-                    <div class="col-md-3 clearfix">
-                        <div class="header-ctn actions">
-                            <a href="#" class="action-link">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-                                    <path
-                                        d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
-                                </svg>
-                                <span>Profile</span>
-                            </a>
-                            <a href="#" class="action-link">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-                                    <path
-                                        d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H4.414a1 1 0 0 0-.707.293L.854 15.146A.5.5 0 0 1 0 14.793V2z" />
-                                </svg>
-                                <span>Messages</span>
-                            </a>
-                            <a href="#" class="action-link">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-                                    <path d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314" />
-                                </svg>
-                                <span>Orders</span>
-                            </a>
-                            <a href="#" class="action-link">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
-                                    <path
-                                        d="M0 24C0 10.7 10.7 0 24 0L69.5 0c22 0 41.5 12.8 50.6 32l411 0c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3l-288.5 0 5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5L488 336c13.3 0 24 10.7 24 24s-10.7 24-24 24l-288.3 0c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5L24 48C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z" />
-                                </svg>
-                                <span>Cart</span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- /MAIN HEADER -->
-        <!-- BOTTOM HEADER -->
-        <div id="bottom-header">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6">
-                        <ul class="header-links pull-left">
-                            <li><a href="#"><i class="fa-solid fa-bars"></i><span class="px-2">All category</span></a>
-                            </li>
-                            <li><a href="#">Hot offers</a></li>
-                            <li><a href="#">Gift boxes</a></li>
-                            <li><a href="#">Projects</a></li>
-                            <li><a href="#">Menu item</a></li>
-                            <li><a href="#"><span>Help </span><i class="fa-sharp fa-solid fa-chevron-down"
-                                        style="color: #8b96a5"></i></a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6">
-                        <ul class="header-links pull-right">
-                            <li><a href="#">English, USD <i class="fa-sharp fa-solid fa-chevron-down"
-                                        style="color: #8b96a5"></i></a></li>
-                            <li><a href="#">Ship to <img src="./img/flags/germany.png"> <i
-                                        class="fa-sharp fa-solid fa-chevron-down" style="color: #8b96a5"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- /BOTTOM HEADER -->
-    </header>
-    <div id="main">
-        <!-- BREADCRUMB -->
-        <div id="breadcrumb" class="section">
-            <!-- container -->
-            <div class="container">
-                <!-- row -->
-                <div class="row">
-                    <div class="col-md-12">
-                        <ul class="breadcrumb-tree">
-                            <li><a href="#">Home &nbsp; &nbsp;<i class="fa-solid fa-chevron-right"></i></a></li>
-                            <li><a href="#">Clothings &nbsp; &nbsp;<i class="fa-solid fa-chevron-right"></i></a></li>
-                            <li><a href="#">Men's wear &nbsp; &nbsp;<i class="fa-solid fa-chevron-right"></i></a></li>
-                            <li><a href="#">Summer clothing</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- /row -->
-            </div>
-            <!-- /container -->
-        </div>
-        <!-- /BREADCRUMB -->
-
-        <div class="section">
-            <div class="container">
-                <div class="row">
-                    <!-- ASIDE -->
-                    <div id="aside" class="col-md-3">
-
-                        <!-- CATEGORY -->
-                        <div class="aside">
-                            <h6 class="aside-title">Category <span><i class="fa-solid fa-angle-up"></i></span></h6>
-                            <div class="product-category">
-                                <ul>
-                                    <li><a href="#">Mobile accessory</a></li>
-                                    <li><a href="#">Electronics</a></li>
-                                    <li><a href="#">Smartphones</a></li>
-                                    <li><a href="#">Modern tech</a></li>
-                                    <li class="see-more"><a href="#">See all</a></li>
-                                </ul>
-                            </div>
-                        </div>
-
-                        <!-- BRAND -->
-                        <div class="aside">
-                            <h6 class="aside-title">Brand  <span><i class="fa-solid fa-angle-up"></i></span></h6>
-                            <div class="checkbox-filter">
-                                <div class="input-checkbox">
-                                    <
+                            <div class="price-filter">
                             </div>
                         </div>
         
